CSS/styles.css
:root {
   --colorSecond: #666;
   --colorMain: #222;
   --colorBgMain:  #fff;
   --colorBgSecond: #F0F0F0;
   --colorDistinct: #F47E00;
 }
 
 html {
   box-sizing: border-box;
   font-size: 10px;
 }
 
 *,
 *:before,
 *:after {
      box-sizing: inherit;
 }
 
 body {
   margin: 0;
   padding: 0;
   color: var(--colorMain);
   background-color: var(--colorBgMain);
   font-family: 'Lora', Georgia, Times, serif;
   font-size: 2rem;
   text-shadow: 0, 2px, 0 rgba(0,0,0, .07);
   -webkit-overflow-scrolling: touch;   
   overflow-y: scroll; 
 }
 
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
   font-weight: bold;
   text-align: center;
 }
 p {
   line-height: 1.45;
   margin-bottom: 1.5rem;
   text-align: center; 
   font-weight: 300;
   font-size: 1.8rem;
 }

small {
  font-size: 1.5rem;
}

 a {
   text-decoration: none;
   margin: 0;
   font-weight: 300;
   color: var(--colorSecond);
 }

 a:hover,
 a:focus {
   color: var(--colorDistinct);
 }

 li {
   list-style-type: none;
 }

 img {
  vertical-align: middle;
  padding: 10px;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
}
/* NAV */

#navbar  {
  border: 1px solid var(--colorBgSecond);
  display: flex;
  margin: 0;
  }
  /* Nav Menu */
  .nav-menu {
    flex: 4;
    padding: 0;
    margin: 0;
    margin-left: 10%;
    padding: 1rem 0;
    display: flex;
    align-items: center;
    justify-content: start;  
  }

  .nav-menu ul{
    display: flex;
    margin: 0;
    padding: 0;
  }

  .nav-menu a {
    padding: 0;
    margin-right: 15px;
    font-size: 1.65rem;
  }

  .nav-menu a:last-child{
    margin-right: 0;
  }
  /* Nav Social */
  .nav-social {
    flex: 2;
    padding: 1rem 0;
    margin: 0;
    border-right: 1px solid var(--colorBgSecond);
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .nav-social ul{
    display: flex;
    padding: 0;
    margin: 0;
  }

  .nav-social a {
    padding: 0;
    margin: 0 5px;
    color: var(--colorMain);
    font-size: 2.5rem;
  }


 .nav-social a:hover,
 .nav-social a:focus {
   color: var(--colorDistinct);
 }

 .nav-menu a:hover,
 .nav-menu a:focus,
 .nav-menu a:active {
   color: var(--colorMain);
 }

.input-group {
  padding: 0;
  margin: 0;
  margin-right: 10%;
  display: flex;
  flex: 1;
  align-items: center;
  justify-content: end;
}

input[type="search"] {
 font-style: oblique;
 font-size: 1.4rem;
 border: 1px solid transparent;
 border-bottom: 1px dotted var(--colorBgSecond);
 display: none;
}

input[type="search"],
.btn-search i
 {
  padding: 5px;
  margin: 0;
  background-color: var(--colorBgMain);
}

.fa-search {
  border: 2px solid var(--colorSecond);
  border-radius: 7px;
  -webkit-border-radius: 7px;
  -moz-border-radius: 7px;
  -ms-border-radius: 7px;
  -o-border-radius: 7px;
  color: var(--colorSecond);
}

.fa-search:hover,
.fa-search:focus {
  color: var(--colorBgMain);
  background-color: var(--colorSecond);
}

.btn-search {
  margin: 0;
  background-color: var(--colorBgMain);
  padding: 2px;
  border: transparent;
}

.toggler {
  display: none;
  font-size: 4rem;
  padding: 5px 0;
  border: 2px solid var(--colorBgSecond);
  margin: 5px 20px;
  color: var(--colorSecond);
  border-radius: 15px;
  -webkit-border-radius: 15px;
  -moz-border-radius: 15px;
  -ms-border-radius: 15px;
  -o-border-radius: 15px;
}

/* Main */
main {
  width: 70%;
  margin: 3rem auto 0;
  display: flex;
  justify-content: center;
  align-items: center; 
  flex-direction: column; 
}
article {
  display: flex;
  margin: 0;
  padding: 50px 0;
  justify-content: center;
  align-items: center;
  border-bottom: 2px dotted var(--colorBgSecond);
}
.img-section {
  flex: 4;
  margin: 0;
  padding: 0;
  display: flex;
}

 .img-section img {
  margin: 0;
  padding: 0;
  width: 100%;
  height: auto;
  border: 1px solid transparent;
  border-radius: 25px;
  -webkit-border-radius: 25px;
  -moz-border-radius: 25px;
  -ms-border-radius: 25px;
  -o-border-radius: 25px;
  flex: 1;
} 

.text-section {
  flex: 8;
  margin: 0;
  padding: 10px;
  margin-left: 15px;
}

.text-section h3,
.text-section p {
  text-align: left;
}

.text-section > * {
  padding: 2rem auto;
  margin: 0;
}

.info-section {
  display: flex;
  font-size: 70%;
  justify-content: start;
  align-items: center;
}

.info-section > * {
  margin-right: 15px;
}

.info-section>*:last-child {
  margin-right: 0;  
}

 .author img {
  width: 60px;
  height: auto;
  border: 1px solid transparent;
  border-radius: 50px;
  -webkit-border-radius: 50px;
  -moz-border-radius: 50px;
  -ms-border-radius: 50px;
  -o-border-radius: 50px;
  padding: 5px;
}
.article-btn { margin-top: 2rem; }

.article-btn  a  {
  font-size: 1.68rem;
  color: var(--colorMain);
  padding: 10px 25px;
  background-color: var(--colorBgMain);
  border: 1px solid var(--colorDistinct);
  border-radius: 30px;
  -webkit-border-radius: 30px;
  -moz-border-radius: 30px;
  -ms-border-radius: 30px;
  -o-border-radius: 30px;
  }

.article-btn a:hover,
.article-btn a:focus {
  background-color: var(--colorDistinct);
  color: var(--colorBgMain);
}

/* BreadCrumbs */
#bcrumbs {
  display: flex;
  border-top: 1px solid var(--colorBgSecond);
  padding: 7rem 0;
}

 .bcrumb-item {
  border: 2px solid var(--colorBgSecond);
  border-radius: 50%;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  padding: 15px;
  margin-right: 10px;
  -o-border-radius: 50%;
}

 .bcrumb-item:hover,
 .bcrumb-item:focus {
  border-color: var(--colorDistinct);
}

#bcrumbs .active {
    border-color: var(--colorDistinct);
}
/* Upper Footer */
.upper__footer {
  display: flex;
  justify-content: space-between;
  align-items: stretch;
}
.upper__footer span {
  font-weight: bold;
}

.upper__footer h4 {
  margin: 0;
  padding:10px 0;
}
/* Upper Footer one */

    .upper__footer-one {
      background-color: pink;
      flex: 1;
      padding:0;
      padding-left: 10%;
    }
   
  /* Upper footer 2 */
 
    .upper__footer-two {
      background-color: yellow;
      flex: 1;
      display: flex;
      flex-direction: column;
      align-items: center;  
      padding: 0;
      margin: 0;
    }
    .upper__footer-two .nav-menu {
      margin: 0;
      padding: 0;
    }
        .upper__footer-two .nav-menu ul{
          display: flex;
          flex-direction: column;
          justify-content: center;
          border: 1px solid green;
          margin: 0;
          padding: 0;
        }
        .upper__footer-two .nav-menu li {
          border: 1px solid red;
        }
        .upper__footer-two .nav-menu a {
          border: 1px solid blue;
        }
    /* Upper footer 3 */
    .upper__footer-three {
      background-color: yellowgreen;
      flex: 1;
      display: flex;
      flex-direction: column;
      justify-content: center;  
      align-items: start;  
      padding: 0;  
      padding-left: 10%;
      margin: 0;
    }
    .upper__footer-three p {
      margin: 0;
      padding: 5px auto;
    }
    .upper__footer-three .nav-social {
      border-right: 0;
    }

/* MEDIA @ 935px */
@media screen and (max-width: 935px) {
    /* Nav Menu */
    .nav-menu {
      margin-left: 8%;
      flex:3
  }
   .nav-menu a {
      margin-right: 12.5px;
      font-size: 1.45rem;
    }
    .nav-social {
      flex:1;
    }
    .input-group {
      margin-right: 8%;
    }
    
}
/* MEDIA @ 752px */
@media screen and (max-width: 752px) {
  #navbar {
    flex-direction: column;
    width: 100%;
    display: none;
  }
  .nav-menu,
  .nav-social,
  .input-group {
    margin: 0;
    justify-content: center;
    align-items: center;
  }
  .toggler {
    display: flex;
    align-items: center;
    justify-content: space-around;
  }
  .fa-times {
    opacity: 0;
    z-index: 2;
    color: var(--colorDistinct);
  }
  .fa__visible {
    opacity: 1;
  }
  .fa__hidden {
    opacity: 0;
  }
  .nav-menu ul{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .nav-menu a {
    margin-right: 0;
    font-size: 110%;
  }
  .nav-menu li {
    padding-bottom: 10px;
  }

  .nav-social a {
    font-size: 110%;
  }
  .input-group {
    padding: 10px 0;
  }


}

